[package]
name = "rust-colorful-log-lib"
version = "0.1.0"
authors = ["Marcos Vinicius Souza Campos <contato.marcoscampos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term-painter = "0.2.4"
chrono = "0.4"